Configured social logins

--- a/source/pdxtechwomen.html
+++ b/source/pdxtechwomen.html
@@ -3,9 +3,26 @@
 </head>
 
 <body>
+	<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '801810686539310',
+      xfbml      : true,
+      version    : 'v2.2'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
+  {{> loginButtons}}
 </body>
 
 <template name="hello">
