--- a/source/training.html
+++ b/source/training.html
@@ -1,22 +1,143 @@
+<!DOCTYPE HTML>
+<html><head>
+<!--
 
-	<head>
-		<title>PDX Tech Women</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
+	Escape Velocity by HTML5 UP
 
-	<body>
-	</body>
+	html5up.net | @n33co
+
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+-->
+  <title>Right Sidebar - Escape Velocity by HTML5 UP</title>
+
+  
+  
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
+  
+  <meta name="description" content="">
+
+  
+  <meta name="keywords" content="">
+
+<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+  
+  <script src="js/jquery.min.js"></script>
+  
+  <script src="js/jquery.dropotron.min.js"></script>
+  
+  <script src="js/skel.min.js"></script>
+  
+  <script src="js/skel-layers.min.js"></script>
+  
+  <script src="js/init.js"></script>
+  
+  <link rel="stylesheet" href="css/skel.css">
+
+  
+  <link rel="stylesheet" href="css/style.css">
+
+  
+  <link rel="stylesheet" href="css/style-desktop.css">
+
+<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head><noscript></noscript><body class="right-sidebar">
+<!-- Header -->
+<div id="header-wrapper" class="wrapper">
+<div id="header"><!-- Logo -->
+<div id="logo">
+<h1><a href="index.html">Escape Velocity</a></h1><br>
+</div>
+<!-- Nav --> <nav id="nav"> </nav>
+<ul>
+  <li class="current"><a href="index.html">Home</a></li>
+  <li> <a href="">Dropdown</a>
+    <ul>
+      <li><a href="#">Lorem ipsum</a></li>
+      <li><a href="#">Magna veroeros</a></li>
+      <li><a href="#">Etiam nisl</a></li>
+      <li> <a href="">Sed consequat</a>
+        <ul>
+          <li><a href="#">Lorem dolor</a></li>
+          <li><a href="#">Amet consequat</a></li>
+          <li><a href="#">Magna phasellus</a></li>
+          <li><a href="#">Etiam nisl</a></li>
+          <li><a href="#">Sed feugiat</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Nisl tempus</a></li>
+    </ul>
+  </li>
+  <li><a href="left-sidebar.html">Left Sidebar</a></li>
+  <li><a href="right-sidebar.html">Right Sidebar</a><a href="no-sidebar.html">No Sideba</a></li>
+  
+</ul>
+</div>
+</div>
+
+
+<div class="wrapper style2">
+<div class="title">Training</div>
+<div id="main" class="container">
+<div class="row 150%">
+<div class="8u"><!-- Content --><a href="#" class="image featured"><span style="font-weight: bold;"></span></a><br>
+<div id="content">https://thewc.co/<br>
+http://ladieslearningcode.com<br>
+<br>
+<br>
+<ul>
+  <li><br>
+  </li>
+</ul>
+</div></div></div></div></div>
+&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <br>
+<br>
+<br>
+<br>
+&nbsp;
+<div id="footer-wrapper" class="wrapper">
+<div class="title">Mentoring AND TUTORING&nbsp;&nbsp;  <br>
+</div>
+<div id="footer" class="container"><header class="style1"></header><span style="font-weight: bold;">https://www.techwomen.org/mentors<br>
+https://getconnected.abington.psu.edu/organization/womenfortechnology/news/details/41020?fromcampus=true&nbsp;&nbsp;  <br>
+</span><hr>
+<div class="row 150%">
+<div class="6u"><!-- Contact Form --> <section> </section>
+<form method="post" action="#">
+  <div class="row 50%">
+  <div class="6u"> <input name="name" id="contact-name" placeholder="Name" type="text"> </div>
+  <div class="6u"> <input name="email" id="contact-email" placeholder="Email" type="text"> </div>
+  </div>
+  <div class="row 50%">
+  <div class="12u"> <textarea name="message" id="contact-message" placeholder="Message" rows="4"></textarea> </div>
+  </div>
+  <div class="row">
+  <div class="12u">
+  <ul class="actions">
+    <li><input class="style1" value="Send" type="submit"></li>
+    <li><input class="style2" value="Reset" type="reset"></li>
+  </ul>
+  </div>
+  </div>
+</form>
+</div>
+<div class="6u"><!-- Contact --> <section class="feature-list small"> </section>
+<div class="row">
+<div class="6u"><section></section><p><br><br>
+ </p>
+</div>
+<div class="6u"><section></section><p><a href="#"><br>
+</a> </p>
+</div>
+</div>
+
+</div>
+</div>
+<hr> </div>
+<div id="copyright">
+<ul></ul>
+</div>
+</div>
+
+</body></html>
