--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
-	<body class="homepage">
+	<body>
 
 		<!-- Header -->
 			<div id="header-wrapper" class="wrapper">
@@ -62,7 +62,7 @@
 				<div class="title">About</div>
 				<p class="style1">This site is designed BY women in the Portland tech community FOR ALL women in the Portland tech community to learn, grow and support each other. This site is meant as a supplement to physical community and not to replace it. To that end, please join a group, then see your group leader or other members for the signup code. This helps keep the website users to active women members of the Portland Tech Community.</p>
 
-				<p class="style1">If you are having any technical difficulties with the site or if your group is not listed above, please <a href="#">contact us</a>
+				<p class="style1">If you are having any technical difficulties with the site or if your group is not listed above, please <a href="#">contact us</a></p>
 
 
 					
