--- a/source/left-sidebar.html
+++ b/source/left-sidebar.html
@@ -1,10 +1,9 @@
-<!DOCTYPE HTML>
+
 <!--
 	Escape Velocity by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
 	<head>
 		<title>Left Sidebar - >Escape Velocity by HTML5 UP</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -23,7 +22,7 @@
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
-	<body class="left-sidebar">
+	<body>
 
 		<!-- Header -->
 			<div id="header-wrapper" class="wrapper">
